[package]
name = "rust-async"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-channel = "2.3.1"
clap = { version = "4.5.17", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
